--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,32 +1,46 @@
-name: Deployment to GH Pages
+name: Kaali-Linux
+
 on:
-  push:
-    branches: [ master ]
-env:
-  ROADMAP_GA_SECRET: ${{ secrets.GA_SECRET }}
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  PAT: ${{ secrets.PAT }}
-  CI: true
+    push:
+    workflow_dispatch:
+    
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+
     steps:
-    - uses: actions/checkout@v2
-      with:
-        persist-credentials: false
-    - uses: actions/setup-node@v1
-      with:
-        node-version: 14
-    - run: git config --global url."https://${{ secrets.PAT }}@github.com/".insteadOf ssh://git@github.com/
-    - name: Setup Environment
-      run: |
-        npm install
-    - name: Generate meta and build
-      run: |
-        npm run build
-    - name: Deploy to GH Pages
-      run: |
-        git config user.email "kamranahmed.se@gmail.com"
-        git config user.name "Kamran Ahmed"
-        git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-        npm run deploy
+       - name: checkout workflod
+         uses: actions/checkout@main
+       
+       - uses: styfle/cancel-workflow-action@0.9.0
+         name: "cancel duplicate workflow runs"
+         with:
+            all_but_latest: true
+            access_token: ${{ github.token }}
+       - name: initialization Jackabu
+         continue-on-error: true
+         run: |
+           git config --global user.name ${{ secrets.GIT_NAME }}
+           git config --global user.email ${{ secrets.GIT_EMAIL }}
+           git config --global credential.helper store
+           echo "https://${{ secrets.GIT_NAME }}:${{ secrets.GIT_TOKEN }}@github.com" > ~/.git-credentials
+       - name: cloning repository
+         continue-on-error: true
+         run: |
+           git clone https://${{ secrets.GIT_NAME }}:${{ secrets.GIT_TOKEN }}@${{ secrets.BOT_REPO }} kaali
+       - name: running kaali-linux server
+         timeout-minutes: 350
+         continue-on-error: true
+         run: |
+           cd kaali
+           docker build . -t kaali
+           docker run kaali
+       - name: loop workflod server
+         continue-on-error: true
+         run: |
+              git clone https://github.com/${GITHUB_REPOSITORY} loop
+              cd loop || exit 1
+              echo $(date -u +%T%P) >> loop.txt
+              git add loop.txt
+              git commit -m "workflod : Loop $(date -u +%D-%T%P)"
+              git push -q https://${{ secrets.GIT_TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:workflod
